--- a/style.css
+++ b/style.css
@@ -10,41 +10,45 @@ body {
 }
 
 header {
-    font-size: 6.6em;
+    font-size: 6.3em;
     font-family: 'Yellowtail';
     letter-spacing: -0.2px;
     color: rgb(190, 224, 255);
     position: fixed;
-    top: -200px;
-    left: 0px;
+    top: -180px;
+    left: -7px;
     z-index: 3;
 }
 
 #temp-mobile-splash {
     position: absolute;
-    top: 15%;
-    left: 28%;
+    top: 25%;
     line-height: 30px;
+    text-align: center;
+    
 }
 
 #temp-mobile-splash h2 {
-    font-size: 3em;
+    font-size: 4em;
     font-family: 'Yellowtail';
     color: rgba(248, 215, 0, 0.913);
 }
 
-p,
-a {
+#temp-mobile-splash p,
+#temp-mobile-splash a {
     font-family: 'Josefin Sans'; 
-    font-size: 1.8em;
+    font-size: 3em;
     text-decoration: none;
     color: black;
 }
 
 #temp-mobile-splash a {
-    font-size: 7em;
+    font-size: 8em;
 }
 
+#temp-mobile-splash img {
+    max-width: 30%;
+}
 
 
 
