--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header {
     font-size: 8.8em;
     font-family: 'Yellowtail';
     letter-spacing: -0.2px;
-    line-height: 190px;
+    line-height: 187px;
     color: rgba(248, 215, 0, 0.913);
     position: fixed;
     top: -170px;
@@ -40,7 +40,7 @@ header {
     font-family: 'Josefin Sans'; 
     text-decoration: none;
     color: black;
-    font-size: 3em;
+    font-size: 3.1em;
       
 }
 
@@ -65,14 +65,16 @@ header {
 } */
 
 #temp-mobile-splash a {
-    font-size: 2.5em;
+    font-size: 2em;
     text-decoration: none;
-    color: black;
-    line-height: 80px;
+    font-family: 'Yellowtail';
+    letter-spacing: -0.2px;
+    color: rgba(248, 215, 0, 0.913);
 }
 
 /* #temp-mobile-splash a {
     font-size: 6em;
+    ✉
 } */
 
 #temp-mobile-splash img {
