--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ header {
     position: absolute;
     top: 35%;
     line-height: 18px;
+    letter-spacing: -1px;
     text-align: center; 
     font-family: 'Josefin Sans'; 
     text-decoration: none;
