--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header {
     font-size: 8.8em;
     font-family: 'Yellowtail';
     letter-spacing: -0.2px;
-    line-height: 187px;
+    line-height: 180px;
     color: rgba(248, 215, 0, 0.913);
     position: fixed;
     top: -170px;
@@ -36,7 +36,7 @@ header {
     position: absolute;
     top: 35%;
     line-height: 18px;
-    letter-spacing: -1px;
+    letter-spacing: -1.3px;
     text-align: center; 
     font-family: 'Josefin Sans'; 
     text-decoration: none;
@@ -66,11 +66,9 @@ header {
 } */
 
 #temp-mobile-splash a {
-    font-size: 2em;
+    font-size: 3em;
     text-decoration: none;
-    font-family: 'Yellowtail';
-    letter-spacing: -0.2px;
-    color: rgba(248, 215, 0, 0.913);
+    color: black;
 }
 
 /* #temp-mobile-splash a {
